--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=7.0",
         "laravel/lumen-framework": "5.5.*",
-        "vlucas/phpdotenv": "~2.2"
+        "vlucas/phpdotenv": "~2.2",
+        "oceanapplications/currencylayer-php-client": "1.4.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
